--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,13 +3,19 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      terraform: 1.6
+      python: 3.11  # Just to satisfy runtime requirement
     commands:
       - echo Installing Terraform...
+      - curl -fsSL https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip -o terraform.zip
+      - unzip terraform.zip
+      - mv terraform /usr/local/bin/
+      - terraform version
+
   pre_build:
     commands:
       - echo Initializing Terraform...
       - terraform init
+
   build:
     commands:
       - echo Planning Terraform...
