--- a/terraform/buildspec-infra.yaml
+++ b/terraform/buildspec-infra.yaml
@@ -2,26 +2,26 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      python: 3.8
     commands:
-      - echo "Installing unzip..."
-      - yum install -y unzip
-      - echo "Downloading Terraform..."
+      - echo "Installing unzip and Terraform..."
+      - |
+        if command -v yum >/dev/null; then
+          yum install -y unzip curl
+        elif command -v apt-get >/dev/null; then
+          apt-get update && apt-get install -y unzip curl
+        else
+          echo "Unsupported package manager" && exit 1
+        fi
       - curl -fSL https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip -o terraform.zip
-      - echo "Unzipping..."
       - unzip terraform.zip
       - mv terraform /usr/local/bin/
       - terraform version
 
   pre_build:
     commands:
-      - echo "Changing directory to terraform/"
-      - cd terraform
       - terraform init
 
   build:
     commands:
-      - echo "Running terraform plan/apply"
       - terraform plan -out=tfplan
       - terraform apply -auto-approve tfplan
