--- a/terraform/buildspec-infra.yaml
+++ b/terraform/buildspec-infra.yaml
@@ -3,9 +3,10 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo Installing unzip and curl...
-      - yum install -y unzip curl
-      - echo Downloading Terraform...
+      - echo "Detected Ubuntu environment. Updating apt..."
+      - apt-get update -y
+      - apt-get install -y unzip curl
+      - echo "Downloading Terraform..."
       - curl -fsSL https://releases.hashicorp.com/terraform/1.6.0/terraform_1.6.0_linux_amd64.zip -o terraform.zip
       - unzip -o terraform.zip
       - chmod +x terraform
@@ -14,6 +15,7 @@ phases:
 
   pre_build:
     commands:
+      - echo "Initializing Terraform..."
       - cd terraform
       - terraform init
 
