--- a/buildspec-infra.yaml
+++ b/buildspec-infra.yaml
@@ -3,16 +3,14 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "Updating apt and installing unzip/curl..."
+      - echo "Installing unzip and curl..."
       - apt-get update -y
       - apt-get install -y unzip curl
       - echo "Downloading Terraform..."
       - curl -fsSL https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip -o terraform.zip
       - unzip -o terraform.zip
       - chmod +x terraform
-      - mv terraform ~/usr/local/bin/
-      - ls
-      - pwd
+      - mv terraform /usr/local/bin/
       - terraform version
 
   pre_build:
