--- a/buildspec-infra.yaml
+++ b/buildspec-infra.yaml
@@ -3,15 +3,22 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "Installing unzip and curl..."
-      - apt-get update -y
-      - apt-get install -y unzip curl
+      - echo "Updating apt and installing tools..."
+      - apt-get update && apt-get install -y unzip curl
+
       - echo "Downloading Terraform..."
-      - curl -fsSL https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip -o terraform.zip
-      - unzip -o terraform.zip
+      - curl -fSL -o terraform.zip https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip
+
+      - echo "Checking if terraform.zip was downloaded..."
+      - ls -lh terraform.zip || (echo "terraform.zip not found, download failed!" && exit 1)
+
+      - echo "Unzipping Terraform..."
+      - unzip -o terraform.zip || (echo "Unzip failed. File is likely corrupt or missing." && exit 1)
+
       - chmod +x terraform
       - mv terraform /usr/local/bin/
       - terraform version
+
 
   pre_build:
     commands:
