--- a/buildspec-infra.yaml
+++ b/buildspec-infra.yaml
@@ -3,14 +3,15 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "Updating apt and installing tools..."
-      - apt-get update && apt-get install -y unzip curl
+      - echo "Installing unzip and curl..."
+      - if command -v yum >/dev/null; then yum install -y unzip curl; fi
+      - if command -v apt-get >/dev/null; then apt-get update && apt-get install -y unzip curl; fi
 
       - echo "Downloading Terraform..."
       - curl -fSL -o terraform.zip https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip
 
       - echo "Checking if terraform.zip was downloaded..."
-      - ls -lh terraform.zip || (echo "terraform.zip not found, download failed!" && exit 1)
+      - if [ ! -s terraform.zip ]; then echo "terraform.zip not found or empty, download failed!" && exit 1; fi
 
       - echo "Unzipping Terraform..."
       - unzip -o terraform.zip || (echo "Unzip failed. File is likely corrupt or missing." && exit 1)
@@ -19,9 +20,9 @@ phases:
       - mv terraform /usr/local/bin/
       - terraform version
 
-
   pre_build:
     commands:
+      - echo "Initializing Terraform..."
       - cd terraform
       - terraform init
 
