--- a/buildspec-infra.yaml
+++ b/buildspec-infra.yaml
@@ -1,33 +1,24 @@
 version: 0.2
-
 phases:
   install:
+    runtime-versions:
+      docker: "18.9"
+      python: "python3.8"  # Or your preferred Python version
     commands:
-      - echo "Installing unzip and curl if missing..."
-      - if command -v yum >/dev/null; then yum install -y unzip curl; fi
-      - if command -v apt-get >/dev/null; then apt-get update && apt-get install -y unzip curl; fi
-
-      - echo "Downloading Terraform..."
-      - curl -fsSL -o terraform.zip https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip
-
-      - echo "Unzipping Terraform..."
-      - unzip -o terraform.zip
-      - chmod +x terraform
-      - mv terraform /usr/local/bin/
-      - terraform version
-
+      - yum update -y
+      - yum install -y wget unzip
+      - wget https://releases.hashicorp.com/terraform/0.14.10/terraform_0.14.10_linux_amd64.zip
+      - unzip terraform_0.14.10_linux_amd64.zip
+      - sudo mv terraform /bin/terraform
+      - chmod +x /bin/terraform
+      - terraform --version # Verify Terraform installation
   build:
     commands:
-      - echo "Initializing Terraform"
-      - cd terraform
+      - terraform -v  # Verify Terraform version
       - terraform init
-
-      - echo "Planning changes"
-      - terraform plan -out=tfplan
-
-      - echo "Applying changes"
-      - terraform apply -auto-approve tfplan
-
+      - terraform validate
+      - terraform plan -var="region=$AWS_REGION"  #  Use $AWS_REGION if region is an environment variable
   post_build:
     commands:
-      - echo "Deployment complete!"
+      - echo "Build complete."
+      -
