--- a/buildspec-infra.yaml
+++ b/buildspec-infra.yaml
@@ -1,24 +1,29 @@
 version: 0.2
+
 phases:
   install:
-    runtime-versions:
-      docker: "18.9"
-      python: "python3.8"  # Or your preferred Python version
     commands:
-      - yum update -y
-      - yum install -y wget unzip
-      - wget https://releases.hashicorp.com/terraform/0.14.10/terraform_0.14.10_linux_amd64.zip
-      - unzip terraform_0.14.10_linux_amd64.zip
-      - sudo mv terraform /bin/terraform
-      - chmod +x /bin/terraform
-      - terraform --version # Verify Terraform installation
+      - echo "Installing unzip and curl..."
+      - yum install -y unzip curl wget
+
+      - echo "Downloading Terraform..."
+      - wget https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip -O terraform.zip
+      - unzip -o terraform.zip
+      - mv terraform /usr/local/bin/terraform
+      - chmod +x /usr/local/bin/terraform
+      - terraform --version
+
   build:
     commands:
-      - terraform -v  # Verify Terraform version
+      - echo "Initializing Terraform..."
       - terraform init
+
+      - echo "Validating Terraform..."
       - terraform validate
-      - terraform plan -var="region=$AWS_REGION"  #  Use $AWS_REGION if region is an environment variable
+
+      - echo "Planning Terraform..."
+      - terraform plan -var="region=$AWS_REGION"
+
   post_build:
     commands:
       - echo "Build complete."
-      -
