--- a/buildspec-infra.yaml
+++ b/buildspec-infra.yaml
@@ -3,8 +3,8 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo "Installing unzip and curl..."
-      - yum install -y unzip curl wget
+      - echo "Installing unzip, curl, wget..."
+      - apt-get update && apt-get install -y unzip curl wget
 
       - echo "Downloading Terraform..."
       - wget https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip -O terraform.zip
