--- a/buildspec-infra.yaml
+++ b/buildspec-infra.yaml
@@ -2,28 +2,25 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      python: 3.11
     commands:
-      - echo "Installing unzip, curl, wget..."
-      - apt-get update && apt-get install -y unzip curl wget
+      - set -e
+      - set -x
+      - echo Installing Terraform...
+      - curl -fsSL https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip -o terraform.zip
+      - unzip terraform.zip
+      - mv terraform /usr/local/bin/
+      - terraform version
 
-      - echo "Downloading Terraform..."
-      - wget https://releases.hashicorp.com/terraform/1.6.6/terraform_1.6.6_linux_amd64.zip -O terraform.zip
-      - unzip -o terraform.zip
-      - mv terraform /usr/local/bin/terraform
-      - chmod +x /usr/local/bin/terraform
-      - terraform --version
+  pre_build:
+    commands:
+      - echo Initializing Terraform...
+      - terraform init
 
   build:
     commands:
-      - echo "Initializing Terraform..."
-      - terraform init
-
-      - echo "Validating Terraform..."
-      - terraform validate
-
-      - echo "Planning Terraform..."
-      - terraform plan -var="region=$AWS_REGION"
-
-  post_build:
-    commands:
-      - echo "Build complete."
+      - echo Planning Terraform...
+      - terraform plan -out=tfplan
+      - echo Applying Terraform...
+      - terraform apply -auto-approve tfplan
