--- a/buildspec-frontend.yaml
+++ b/buildspec-frontend.yaml
@@ -5,15 +5,13 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
-      - echo "Installing frontend dependencies..."
+      - cd frontend
       - npm install
   build:
     commands:
-      - echo "Building React app..."
       - npm run build
   post_build:
     commands:
-      - echo "Deploying to S3..."
       - aws s3 sync build/ s3://my-unique-bucket-us-east-1-primary --delete
 artifacts:
   files: []
