--- a/buildspec-backend.yaml
+++ b/buildspec-backend.yaml
@@ -1,20 +1,18 @@
 version: 0.2
+
 phases:
   install:
     runtime-versions:
       nodejs: 18
     commands:
+      - cd backend
       - npm install
   build:
     commands:
       - echo "Build complete"
   post_build:
     commands:
-      - aws ssm send-command \
-          --document-name "AWS-RunShellScript" \
-          --comment "Deploy backend" \
-          --instance-ids i-0ecac24120acb836d \
-          --parameters commands="cd /var/www/backend && git pull && pm2 restart all" \
-          --region your-region
+      - echo "Triggering backend deployment..."
+      # Add SSM or SCP command here
 artifacts:
   files: []
