--- a/buildspec-frontend.yaml
+++ b/buildspec-frontend.yaml
@@ -5,20 +5,21 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
+      - echo "Installing dependencies..."
       - cd frontend/src
       - npm install
+
   build:
     commands:
+      - echo "Building React app..."
       - npm run build
-      - ls -la
-      - ls -la build
 
   post_build:
     commands:
-    - echo "Current directory:" && pwd
-    - echo "Listing contents:" && ls -la
-    - echo "Contents of build/:" && ls -la build || echo "No build/ directory found"
-
+      - echo "Build complete. Checking contents of build/ folder:"
+      - ls -la build || echo "No build/ directory found"
+      - echo "Deploying to S3 bucket..."
       - aws s3 sync build/ s3://my-unique-bucket-us-east-1-primary --delete
+
 artifacts:
   files: []
