--- a/buildspec-frontend.yaml
+++ b/buildspec-frontend.yaml
@@ -6,7 +6,7 @@ phases:
       nodejs: 18
     commands:
       - echo "Installing dependencies..."
-      - cd frontend/src
+      - cd frontend
       - npm install
 
   build:
